Fix recipe links and file names for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <ul>
     <li> <a href="recipes/semo & efo.html">Semo & Efo</a></li>
     <li> <a href="recipes/jollof rice.html">Jollof Rice</a></li>
-     <li><a href="recipes/ofada rIce.html">Ofada Rice</a></li>
+     <li><a href="recipes/ofada rice.html">Ofada Rice</a></li>
 </ul>
 </body>
 </html>
