--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
    <ul>
-    <li> <a href="recipes/semo & efo.html">Semo & Efo</a></li>
-    <li> <a href="recipes/jollof rice.html">Jollof Rice</a></li>
-     <li><a href="recipes/ofada rice.html">Ofada Rice</a></li>
+    <li> <a href="recipes/semo-efo.html">Semo & Efo</a></li>
+    <li> <a href="recipes/jollof-rice.html">Jollof Rice</a></li>
+     <li><a href="recipes/ofada-rice.html">Ofada Rice</a></li>
 </ul>
 </body>
 </html>
